Ability to configure extension Dev mode JVM arguments